gst/rtpmanager/rtpsession.c
@@ -325,7 +325,7 @@ rtp_session_class_init (RTPSessionClass * klass)
 
   g_object_class_install_property (gobject_class, PROP_INTERNAL_SSRC,
       g_param_spec_uint ("internal-ssrc", "Internal SSRC",
-          "The internal SSRC used for the session",
+          "The internal SSRC used for the session (deprecated)",
           0, G_MAXUINT, 0, G_PARAM_READWRITE | G_PARAM_STATIC_STRINGS));
 
   g_object_class_install_property (gobject_class, PROP_INTERNAL_SOURCE,
@@ -610,6 +610,8 @@ rtp_session_set_property (GObject * object, guint prop_id,
       RTP_SESSION_LOCK (sess);
       sess->suggested_ssrc = g_value_get_uint (value);
       RTP_SESSION_UNLOCK (sess);
+      if (sess->callbacks.reconfigure)
+        sess->callbacks.reconfigure (sess, sess->reconfigure_user_data);
       break;
     case PROP_BANDWIDTH:
       RTP_SESSION_LOCK (sess);
@@ -890,6 +892,10 @@ rtp_session_set_callbacks (RTPSession * sess, RTPSessionCallbacks * callbacks,
   if (callbacks->notify_nack) {
     sess->callbacks.notify_nack = callbacks->notify_nack;
     sess->notify_nack_user_data = user_data;
+  }
+  if (callbacks->reconfigure) {
+    sess->callbacks.reconfigure = callbacks->reconfigure;
+    sess->reconfigure_user_data = user_data;
   }
 }
 
